--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,11 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-/.vscode
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
